# PerceptronDemo

./: CMakeLists.txt  README.md
src/: main.cpp
src/lib/: Perceptron.cpp  Perceptron.h  Point.cpp  Point.h  PointsDrawer.cpp  PointsDrawer.h  functions.cpp  functions.h  map.cpp  map.h  random.cpp  random.h
